# cvhmax

./: .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  TODO.md  pyproject.toml
cvhmax/: cvhm.py  cvi.py  filtering.py  hm.py  hp.py  utils.py
docs/: README.md  algorithms.md  api.md  architecture.md  bugs.md  contributing.md  data-model.md  installation.md  kernel-generator.md  quickstart.md  recipes.md  troubleshooting.md
examples/: demo_vdp.py
src/cvhmax/: __about__.py  __init__.py  cvhm.py  cvi.py  filtering.py  hm.py  hp.py  structures.md  utils.py
src/cvhmax/kernel_generator/: __init__.py  generator.py  matern.py
tests/: conftest.py  test_benchmark.py  test_cvhm.py  test_cvi.py  test_filtering.py  test_hm.py  test_hp.py  test_kernel_generator.py  test_parity.py  test_utils.py
tests/kernel_generator/: test_kernel_generator.py  test_kernel_generator_parity.py
