[project]
name = "cvhmax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuanz", email = "yuanz271@gmail.com" }
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "matplotlib>=3.7.3",
    "click>=8.1.7",
    "equinox>=0.10.4",
    "hydra-core>=1.3.2",
    "polars>=0.19.7",
    "seaborn>=0.13.0",
    "pymatreader>=0.0.32",
    "scikit-learn>=1.3.1",
    "jaxtyping>=0.2.19",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "pytest>=7.4.2",
    "ruff>=0.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true
