[project]
name = "cvhmax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuanz", email = "yuanz271@gmail.com" }
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "click>=8.1.7",
    "equinox>=0.11.8",
    "jaxtyping>=0.2.19",
    "tqdm>=4.66.5",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "ruff>=0.1.2",
    "chex>=0.1.87",
]

[tool.hatch.metadata]
allow-direct-references = true
