[project]
name = "cvhmax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuanz", email = "yuanz271@gmail.com" }
]
dependencies = [
    "jax==0.4.38;platform_machine == 'x86_64'",
    "jax>=0.4.38",
    "jaxlib>=0.4.13",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "equinox>=0.11.8",
    "optax>=0.2.3",
    "scikit-learn>=1.5.2",
    "rich>=14.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
kergen = [
    "sympy>=1.12",
    "sympy2jax>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["E501", "F722"]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "chex>=0.1.87",
    "matplotlib>=3.10.3",
    "torch>=2.10.0",
    "einops>=0.8.2",
]

[tool.hatch.metadata]
allow-direct-references = true
